tests/errors/enunciado.pa
program gcd(output);
var a, b : integer;
begin

repeat
b := 5;
b := 5;
until    b + 0 - 5 + 3;

while b - 0 + 5 do
	if a > b then
		a := a - b
	else
		b := b - a;

end.
